--- a/mise.toml
+++ b/mise.toml
@@ -4,12 +4,10 @@ python = "3.12"
 [env]
 _.python.venv = { path = ".venv", create = true } # create the venv if it doesn't exist
 PYTHONPATH = "."
+_.file = ".env.yaml"
 
 [hooks]
 enter = "echo 'Welcome to the template project'"
-
-[tasks.app]
-run = 'uv run python src/app.py'
 
 [tasks.test]
 run = 'uv run pytest'
@@ -29,3 +27,10 @@ run = 'uv run pytest --cov=src --cov-report=html'
 
 [tasks.pyright]
 run = 'uv run pyright'
+
+
+[tasks.be]
+run = 'cd backend; pocketbase serve'
+
+[tasks.serve]
+run = 'uv run python src/app.py'
