--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,12 @@ version = "0.0.1"
 description = "Starting point for Python projects"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = ["loguru>=0.7.3"]
+dependencies = [
+    "loguru>=0.7.3",
+    "nicegui>=3.1.0",
+    "pocketbase>=0.15.0",
+    "pydantic-ai>=1.3.0",
+]
 
 [dependency-groups]
 dev = [
