--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Starting point for Python projects"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "html-sanitizer>=2.6.0",
     "loguru>=0.7.3",
     "nicegui>=3.1.0",
     "pocketbase>=0.15.0",
