--- a/.env.example.yaml
+++ b/.env.example.yaml
@@ -3,6 +3,9 @@ CHROMA_OPENAI_API_KEY: ""
 
 POCKETBASE_URL: "http://127.0.0.1:8090"
 
+CHATBOT_IDS: "chatbot00000001,chatbot00000002,chatbot00000003"
+DEFAULT_SETTING_ID: "default00000000"
+
 TIME_PER_STEP: 10
 INTERVAL_TO_PERSIST: 10
 
