--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "html-sanitizer>=2.6.0",
     "loguru>=0.7.3",
     "nicegui>=3.1.0",
+    "openpyxl>=3.1.5",
+    "pandas>=2.3.3",
     "pocketbase>=0.15.0",
     "pydantic-ai>=1.3.0",
 ]
